tests/mm0_mmu/fail/bad-sort1423.mmu
-- bad modifier order
(sort s1423 pure free strict provable)